--- a/BuhOne/index.html
+++ b/BuhOne/index.html
@@ -39,15 +39,15 @@
 				<div class="row">
 					
 					<div class="col-xl-5 col-lg-4 col-md-3 col-12">
-						<a href="#" class="logo"><img src="img/_src/logo.png" alt="BuhOne">BuhOne</a>
+						<a href="#" class="logo"><img src="img/src/logo.png" alt="BuhOne">BuhOne</a>
 					</div>
 
 					<div class="col-xl-7 col-lg-8 col-md-9 col-12">
 						<div class="row">
-							<div class="col phone"><img src="img/_src/phone.png" alt="">8 (111) 222-33-44</div>
-							<div class="col clock"><img src="img/_src/clock.png" alt="">Пн-Пт 10:00-18:00</div>
-							<div class="col mail"><img src="img/_src/mail.png" alt="">order@buhone.ru</div>
-							<div class="col adr"><img src="img/_src/adr.png" alt="">Невский пр., д.130</div>
+							<div class="col phone"><img src="img/src/phone.png" alt="">8 (111) 222-33-44</div>
+							<div class="col clock"><img src="img/src/clock.png" alt="">Пн-Пт 10:00-18:00</div>
+							<div class="col mail"><img src="img/src/mail.png" alt="">order@buhone.ru</div>
+							<div class="col adr"><img src="img/src/adr.png" alt="">Невский пр., д.130</div>
 						</div>
 						<div class="row">
 							<div class="col">
@@ -98,22 +98,22 @@
 					
 			<div class="owl-carousel carousel-slider">
 
-				<div class="carousel-slider-item overley" style="background-image: url(img/_src/bg-1.jpg);">
+				<div class="carousel-slider-item overley" style="background-image: url(img/src/bg-1.jpg);">
 					<h1>Бухгалтерские услуги<br> в Санкт-Петербурге</h1>
 					<a href="#" class="button button-consult">Бесплатная консультация</a>
 				</div>
 
-				<div class="carousel-slider-item overley" style="background-image: url(img/_src/bg-2.jpg);">
+				<div class="carousel-slider-item overley" style="background-image: url(img/src/bg-2.jpg);">
 					<h2>Бухгалтерское обслуживание<br> и сопровождение</h2>
 					<a href="#" class="button button-consult">Бесплатная консультация</a>
 				</div>
 
-				<div class="carousel-slider-item overley" style="background-image: url(img/_src/bg-3.jpg);">
+				<div class="carousel-slider-item overley" style="background-image: url(img/src/bg-3.jpg);">
 					<h2>Составление бухгалтерской<br> отчетности</h2>
 					<a href="#" class="button button-consult">Бесплатная консультация</a>
 				</div>
 
-				<div class="carousel-slider-item overley" style="background-image: url(img/_src/bg-4.jpg);">
+				<div class="carousel-slider-item overley" style="background-image: url(img/src/bg-4.jpg);">
 					<h2>Организация<br> бухгалтерского учета</h2>
 					<a href="#" class="button button-consult">Бесплатная консультация</a>
 				</div>
@@ -155,7 +155,7 @@
 		<div class="services-container services-container-1">
 			<div class="services-before"></div>
 			<form class="service overley">
-				<div class="background" style="background-image: url(img/_src/service6.jpg);"></div>
+				<div class="background" style="background-image: url(img/src/service6.jpg);"></div>
 				<div class="close">
           <span>×</span>
         </div>
@@ -174,7 +174,7 @@
 		<div class="services-container services-container-2">
 			<div class="services-before"></div>
 			<form class="service overley">
-				<div class="background" style="background-image: url(img/_src/service7.jpg);"></div>
+				<div class="background" style="background-image: url(img/src/service7.jpg);"></div>
 				<div class="close">
           <span>×</span>
         </div>
@@ -193,7 +193,7 @@
 		<div class="services-container services-container-3">
 			<div class="services-before"></div>
 			<form class="service overley">
-				<div class="background" style="background-image: url(img/_src/service3.jpg);"></div>
+				<div class="background" style="background-image: url(img/src/service3.jpg);"></div>
 				<div class="close">
           <span>×</span>
         </div>
@@ -212,7 +212,7 @@
 		<div class="services-container services-container-4">
 			<div class="services-before"></div>
 			<form class="service overley">
-				<div class="background" style="background-image: url(img/_src/service4.jpg);"></div>
+				<div class="background" style="background-image: url(img/src/service4.jpg);"></div>
 				<div class="close">
           <span>×</span>
         </div>
@@ -231,7 +231,7 @@
 		<div class="services-container services-container-5">
 			<div class="services-before"></div>
 			<form class="service overley">
-				<div class="background" style="background-image: url(img/_src/service5.jpg);"></div>
+				<div class="background" style="background-image: url(img/src/service5.jpg);"></div>
 				<div class="close">
           <span>×</span>
         </div>
@@ -250,7 +250,7 @@
 		<div class="services-container services-container-6">
 			<div class="services-before"></div>
 			<form class="service overley">
-				<div class="background" style="background-image: url(img/_src/service2.jpg);"></div>
+				<div class="background" style="background-image: url(img/src/service2.jpg);"></div>
 				<div class="close">
           <span>×</span>
         </div>
@@ -274,22 +274,22 @@
 					<h2>Мы специализируемся</h2>
 				</div>
 				<div class="col-xl-4 col-md-6 services-item-container">
-					<div class="services-item services-item-1 overley" style="background-image: url(img/_src/service6.jpg);"><p>Услуги бухгалтера <br>для ООО</p></div>	
+					<div class="services-item services-item-1 overley" style="background-image: url(img/src/service6.jpg);"><p>Услуги бухгалтера <br>для ООО</p></div>	
 				</div>
 				<div class="col-xl-4 col-md-6 services-item-container">
-					<div class="services-item services-item-2 overley" style="background-image: url(img/_src/service7.jpg);"><p>Оказание бухгалтерских <br>услуг ИП</p></div>	
+					<div class="services-item services-item-2 overley" style="background-image: url(img/src/service7.jpg);"><p>Оказание бухгалтерских <br>услуг ИП</p></div>	
 				</div>
 				<div class="col-xl-4 col-md-6 services-item-container">
-					<div class="services-item services-item-3 overley" style="background-image: url(img/_src/service3.jpg);"><p>Составление бухгалтерской отчетности</p></div>
+					<div class="services-item services-item-3 overley" style="background-image: url(img/src/service3.jpg);"><p>Составление бухгалтерской отчетности</p></div>
 				</div>
 				<div class="col-xl-4 col-md-6 services-item-container">
-					<div class="services-item services-item-4 overley" style="background-image: url(img/_src/service4.jpg);"><p>Организация бухгалтерского учета</p></div>
+					<div class="services-item services-item-4 overley" style="background-image: url(img/src/service4.jpg);"><p>Организация бухгалтерского учета</p></div>
 				</div>
 				<div class="col-xl-4 col-md-6 services-item-container">
-					<div class="services-item services-item-5 overley" style="background-image: url(img/_src/service5.jpg);"><p>Бухгалтерское обслуживание и сопровождение</p></div>
+					<div class="services-item services-item-5 overley" style="background-image: url(img/src/service5.jpg);"><p>Бухгалтерское обслуживание и сопровождение</p></div>
 				</div>
 				<div class="col-xl-4 col-md-6 services-item-container">
-					<div class="services-item services-item-6 overley" style="background-image: url(img/_src/service2.jpg);"><p>Аутсорсинг бухгалтерии</p></div>
+					<div class="services-item services-item-6 overley" style="background-image: url(img/src/service2.jpg);"><p>Аутсорсинг бухгалтерии</p></div>
 				</div>
 			</div>
 		</div>
@@ -307,28 +307,28 @@
 				<div class="col-xl-7 col-lg-8">
 					<div class="about-item">
 						<div class="about-content wow jackInTheBox">
-							<div class="about-icon"><img class="img-svg" src="img/_src/icon1.svg" alt=""></div>
+							<div class="about-icon"><img class="img-svg" src="img/src/icon1.svg" alt=""></div>
 							<div class="about-caption"><h4>30%</h4></div>
 							<div class="about-description"><p>составляет экономия затрат на учётные функции</p></div>
 						</div>
 					</div>
 					<div class="about-item">
 						<div class="about-content wow jackInTheBox" data-wow-delay="0.5s">
-							<div class="about-icon"><img class="img-svg" src="img/_src/icon2.svg" alt=""></div>
+							<div class="about-icon"><img class="img-svg" src="img/src/icon2.svg" alt=""></div>
 							<div class="about-caption"><h4>70+</h4></div>
 							<div class="about-description"><p>специалистов в области финансов и кадровых процессов</p></div>
 						</div>
 					</div>
 					<div class="about-item">
 						<div class="about-content wow jackInTheBox" data-wow-delay="1s">
-							<div class="about-icon"><img class="img-svg" src="img/_src/icon3.svg" alt=""></div>
+							<div class="about-icon"><img class="img-svg" src="img/src/icon3.svg" alt=""></div>
 							<div class="about-caption"><h4>10 лет</h4></div>
 							<div class="about-description"><p>присутствия на рынке аутсорсинговых услуг в России</p></div>
 						</div>
 					</div>
 					<div class="about-item">
 						<div class="about-content wow jackInTheBox" data-wow-delay="1.5s">
-							<div class="about-icon"><img class="img-svg" src="img/_src/icon4.svg" alt=""></div>
+							<div class="about-icon"><img class="img-svg" src="img/src/icon4.svg" alt=""></div>
 							<div class="about-caption"><h4>15 000+</h4></div>
 							<div class="about-description"><p>отчётов передано в государственные органы</p></div>
 						</div>
@@ -346,31 +346,31 @@
 					<h2>С нами работают</h2>
 					<div class="owl-carousel partners">
 						<div class="partner">
-							<img src="img/_src/partners/logo1.png" alt="Партнёр">
+							<img src="img/src/partners/logo1.png" alt="Партнёр">
 						</div>
 						<div class="partner">
-							<img src="img/_src/partners/logo2.png" alt="Партнёр">
+							<img src="img/src/partners/logo2.png" alt="Партнёр">
 						</div>
 						<div class="partner">
-							<img src="img/_src/partners/logo3.png" alt="Партнёр">
+							<img src="img/src/partners/logo3.png" alt="Партнёр">
 						</div>
 						<div class="partner">
-							<img src="img/_src/partners/logo4.png" alt="Партнёр">
+							<img src="img/src/partners/logo4.png" alt="Партнёр">
 						</div>
 						<div class="partner">
-							<img src="img/_src/partners/logo5.png" alt="Партнёр">
+							<img src="img/src/partners/logo5.png" alt="Партнёр">
 						</div>
 						<div class="partner">
-							<img src="img/_src/partners/logo6.png" alt="Партнёр">
+							<img src="img/src/partners/logo6.png" alt="Партнёр">
 						</div>
 						<div class="partner">
-							<img src="img/_src/partners/logo7.png" alt="Партнёр">
+							<img src="img/src/partners/logo7.png" alt="Партнёр">
 						</div>
 						<div class="partner">
-							<img src="img/_src/partners/logo8.png" alt="Партнёр">
+							<img src="img/src/partners/logo8.png" alt="Партнёр">
 						</div>
 						<div class="partner">
-							<img src="img/_src/partners/logo9.png" alt="Партнёр">
+							<img src="img/src/partners/logo9.png" alt="Партнёр">
 						</div>
 					</div>
 				</div>
@@ -387,25 +387,25 @@
 					<div class="owl-carousel reviews">
 						<div class="review">
 							<div class="review-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.</div>
-							<div class="review-image"><img src="img/_src/Ellipse.png"></div>
+							<div class="review-image"><img src="img/src/Ellipse.png"></div>
 							<div class="review-name">Екатерина Иванова</div>
 							<div class="review-position">Директор ООО “Раз-два”</div>
 						</div>
 						<div class="review">
 							<div class="review-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</div>
-							<div class="review-image"><img src="img/_src/user.svg" class="img-svg"></div>
+							<div class="review-image"><img src="img/src/user.svg" class="img-svg"></div>
 							<div class="review-name">Марина Смирнова</div>
 							<div class="review-position">Директор ООО “Три-четыре”</div>
 						</div>
 						<div class="review">
 							<div class="review-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.</div>
-							<div class="review-image"><img src="img/_src/user.svg" class="img-svg"></div>
+							<div class="review-image"><img src="img/src/user.svg" class="img-svg"></div>
 							<div class="review-name">Сергей Петров</div>
 							<div class="review-position">Директор ООО “Пять-шесть”</div>
 						</div>
 						<div class="review">
 							<div class="review-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов.</div>
-							<div class="review-image"><img src="img/_src/user.svg" class="img-svg"></div>
+							<div class="review-image"><img src="img/src/user.svg" class="img-svg"></div>
 							<div class="review-name">Александр Александров</div>
 							<div class="review-position">Директор ООО “Семь-восемь”</div>
 						</div>
@@ -414,7 +414,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="contact" class="overley" style="background-image: url(img/_src/bg-1.jpg);">
+	<section id="contact" class="overley" style="background-image: url(img/src/bg-1.jpg);">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-2 col-5">
@@ -428,10 +428,10 @@
 					</nav>
 				</div>
 				<div class="col-md-4 col-7 call">
-					<div class="phone"><img class="img-svg" src="img/_src/phone.svg" alt="">8 (111) 222-33-44</div>
-					<div class="clock"><img class="img-svg" src="img/_src/clock.svg" alt="">Пн-Пт 10:00-18:00</div>
-					<div class="mail"><img class="img-svg" src="img/_src/mail.svg" alt="">order@buhone.ru</div>
-					<div class="adr"><img class="img-svg" src="img/_src/adr.svg" alt="">Невский пр., д.130</div>
+					<div class="phone"><img class="img-svg" src="img/src/phone.svg" alt="">8 (111) 222-33-44</div>
+					<div class="clock"><img class="img-svg" src="img/src/clock.svg" alt="">Пн-Пт 10:00-18:00</div>
+					<div class="mail"><img class="img-svg" src="img/src/mail.svg" alt="">order@buhone.ru</div>
+					<div class="adr"><img class="img-svg" src="img/src/adr.svg" alt="">Невский пр., д.130</div>
 				</div>
 				<div class="col-md-6 col-12">
 					<div class="map">
